# AmpStageStudio

./: .gitignore  CMakeLists.txt  README.md  amp_profile.h  live_control.h  power_stage.h  preamp.h  preamp_profile.h  tube_stage.h
amps/: fender_bassman_5f6a.amp  fender_champ.amp  fender_deluxe_reverb.amp  fender_princeton.amp  fender_twin_reverb_ab763.amp  marshall_jcm800.amp  marshall_jtm45.amp  marshall_plexi_1959.amp  mesa_boogie_mark_iic_plus.amp  mesa_dual_rectifier.amp  peavey_5150.amp  soldano_slo_100.amp  vox_ac30_top_boost.amp
effects/: chorus_effect.h  compressor_effect.h  klon_effect.h  plate_reverb_effect.h  rat_effect.h  tubescreamer_effect.h
preamps/: fender_bassman_5f6a.preamp  fender_champ.preamp  fender_deluxe_reverb.preamp  fender_princeton.preamp  fender_twin_reverb_ab763.preamp  marshall_jcm800.preamp  marshall_jtm45.preamp  marshall_plexi_1959.preamp  mesa_boogie_mark_iic_plus.preamp  mesa_dual_rectifier.preamp  peavey_5150.preamp  soldano_slo_100.preamp  vox_ac30_top_boost.preamp
tools/: amp_stage_live.cpp  nam_offline_render.cpp  tube_stage_test.cpp
web/: live_state.cfg  server.py
web/static/: app.js  index.html  styles.css
